Logging unit test demo (#9)
* Convert field injection to be constructor injection

* Refactor testing code

* refactor unit test

* refactor unit test

* added logs verification